Update to Spring Boot 4 with OpenRewrite