@@ -358,11 +358,11 @@ public enum EdifactType {
     }
 
     public String urn() {
-        return String.format("urn:org.milyn.edi.unedifact:%s-mapping:*", toString());
+        return "urn:org.milyn.edi.unedifact:%s-mapping:*".formatted(toString());
     }
 
     public String bindingConfigUri() {
-        return String.format("/org/milyn/edi/unedifact/%s/interchange-bindingconfig.xml", toString());
+        return "/org/milyn/edi/unedifact/%s/interchange-bindingconfig.xml".formatted(toString());
     }
 
     public static EdifactType byName(String name) {
