@@ -9,6 +9,7 @@ import org.assimbly.edifactcommon.types.Duration;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.math.RoundingMode;
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
 
@@ -234,8 +235,8 @@ public class CoreTypes
 	
 	public static IMFNode castToIMFNode(Object o)
 	{
-		if (o instanceof IMFNode)
-			return (IMFNode) o;
+		if (o instanceof IMFNode node)
+			return node;
 		
 		final class ANode implements IMFNode
 		{
@@ -894,7 +895,7 @@ public class CoreTypes
 			scale = 14 - nStartDigit;
 			if( scale < 0 ) scale = 0;
 		}
-		return new BigDecimal( d ).setScale(scale, BigDecimal.ROUND_HALF_UP);
+		return new BigDecimal( d ).setScale(scale, RoundingMode.HALF_UP);
 	}
 	
 	public static BigDecimal castToBigDecimal(Double d)
@@ -1341,8 +1342,8 @@ public class CoreTypes
 	{
 		if (!exists(v))
 			throw new NullPointerException();
-		if (v instanceof Integer)
-			return ((Integer)v).intValue();
+		if (v instanceof Integer integer)
+			return integer.intValue();
 		return castToInt(v.toString());
 	}
 
@@ -1350,8 +1351,8 @@ public class CoreTypes
 	{
 		if (!exists(v))
 			throw new NullPointerException();
-		if (v instanceof Long)
-			return ((Long)v).longValue();
+		if (v instanceof Long long1)
+			return long1.longValue();
 		return castToLong(v.toString());
 	}
 
@@ -1359,8 +1360,8 @@ public class CoreTypes
 	{
 		if (!exists(v))
 			throw new NullPointerException();
-		if (v instanceof BigInteger)
-			return (BigInteger)v;
+		if (v instanceof BigInteger integer)
+			return integer;
 		return castToBigInteger(v.toString());
 	}
 
@@ -1368,8 +1369,8 @@ public class CoreTypes
 	{
 		if (!exists(v))
 			throw new NullPointerException();
-		if (v instanceof BigDecimal)
-			return (BigDecimal)v;
+		if (v instanceof BigDecimal decimal)
+			return decimal;
 		return castToBigDecimal(v.toString());
 	}
 
@@ -1377,8 +1378,8 @@ public class CoreTypes
 	{
 		if (!exists(v))
 			throw new NullPointerException();
-		if (v instanceof Double)
-			return ((Double)v).doubleValue();
+		if (v instanceof Double double1)
+			return double1.doubleValue();
 		return castToDouble(v.toString());
 	}
 
@@ -1386,23 +1387,23 @@ public class CoreTypes
 	{
 		if (!exists(v))
 			throw new NullPointerException();
-		if (v instanceof String)
-			return (String)v;
-		if (v instanceof BigDecimal)
-			return castToString((BigDecimal)v);
-		if (v instanceof Double)
-			return castToString(((Double)v).doubleValue());
-		if (v instanceof Float)
-			return castToString((double) (((Float)v).floatValue()));
-		if (v instanceof javax.xml.namespace.QName)
-			return castToString((javax.xml.namespace.QName)v);
-		if (v instanceof Boolean)
-			return castToString(((Boolean)v).booleanValue());
-		if (v instanceof byte[])
-			return castToString((byte[])v);
+		if (v instanceof String string)
+			return string;
+		if (v instanceof BigDecimal decimal)
+			return castToString(decimal);
+		if (v instanceof Double double1)
+			return castToString(double1.doubleValue());
+		if (v instanceof Float float1)
+			return castToString((double) (float1.floatValue()));
+		if (v instanceof javax.xml.namespace.QName name)
+			return castToString(name);
+		if (v instanceof Boolean boolean1)
+			return castToString(boolean1.booleanValue());
+		if (v instanceof byte[] bytes)
+			return castToString(bytes);
 
-		if (v instanceof IMFNode)
-			return ((IMFNode) v).value();
+		if (v instanceof IMFNode node)
+			return node.value();
 
 		return v.toString();
 	}
@@ -1425,8 +1426,8 @@ public class CoreTypes
 	{
 		if (!exists(v))
 			throw new NullPointerException();
-		if (v instanceof Boolean)
-			return ((Boolean)v).booleanValue();
+		if (v instanceof Boolean boolean1)
+			return boolean1.booleanValue();
 		return castToBool(v.toString());
 	}
 	
@@ -1515,13 +1516,13 @@ public class CoreTypes
 		return result;
 	}
 
-	public static Boolean box( boolean    v ) { return new Boolean(v); }
-	public static Byte    box( byte       v ) { return new Byte   (v); }
-	public static Short   box( short      v ) { return new Short  (v); }
-	public static Integer box( int        v ) { return new Integer(v); }
-	public static Long    box( long       v ) { return new Long   (v); }
-	public static Float   box( float      v ) { return new Float  (v); }
-	public static Double  box( double     v ) { return new Double (v); }
+	public static Boolean box( boolean    v ) { return Boolean.valueOf(v); }
+	public static Byte    box( byte       v ) { return Byte.valueOf(v); }
+	public static Short   box( short      v ) { return Short.valueOf(v); }
+	public static Integer box( int        v ) { return Integer.valueOf(v); }
+	public static Long    box( long       v ) { return Long.valueOf(v); }
+	public static Float   box( float      v ) { return Float.valueOf(v); }
+	public static Double  box( double     v ) { return Double.valueOf(v); }
 	public static Object            box( Object     v ) { return v; }
 	public static String            box( String     v ) { return v; }
 	public static byte[]          box( byte[]   v ) { return v; }
